--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ video {
     text-align: center;
     text-decoration: none;
     font-size: 17px;
+    margin-top: -7px;
 }
 
 .dropdown .dropbtn {
@@ -762,7 +763,7 @@ img.social_icon {
 }
 
 .accordion1-item {
-    padding: 140px 20px 130px;
+    padding: 140px 20px 210px;
     position: relative;
     width: 100%;
 }
